syntax = "proto3";

package eu.surething_project.core;

option java_multiple_files = true;
option java_package = "eu.surething_project.core.grpc";
option java_outer_classname = "ServicesProto";

import "loc_claim.proto";
import "loc_endorse.proto";
import "loc_cert.proto";

// Sends a location claim to a witness
service EndorseClaim {
	rpc CheckClaim(SignedLocationClaim) returns (SignedLocationEndorsement) {}
}

// Sends a location Endorsement to the Verifier
service CertifyClaim {
	rpc CheckEndorsement(stream SignedLocationEndorsement) returns (LocationCertificate) {}
}
